# tfwr

./: CMakeLists.txt  README.md
include/: animatedtext.hpp  any.hpp  app_loading_state.hpp  application.hpp  guicomponent.hpp  main_menu_state.hpp  message.hpp  message_dispatcher.hpp  message_handler.hpp  resourceids.hpp  selectabletext.hpp  state.hpp  state_stack.hpp  stateids.hpp  text.hpp
src/: animatedtext.cpp  app_loading_state.cpp  application.cpp  guicomponent.cpp  main.cpp  main_menu_state.cpp  message_dispatcher.cpp  selectabletext.cpp  state.cpp  state_stack.cpp  text.cpp
